Some work on mobile header; lots of issues

--- a/wordpress/wp-content/themes/portfolio/scss/typography/_main.scss
+++ b/wordpress/wp-content/themes/portfolio/scss/typography/_main.scss
@@ -1,20 +1,20 @@
 .type-1 {
-    font-size: 72pt;
+    font-size: 24pt;
     font-family: "Poiret One";
     font-weight: 600;
-    line-height: 15vh;
+    line-height: 75px;
     letter-spacing: 5px;
 }
 
 .type-2 {
     font-size: 14pt;
     font-family: "Open Sans Light";
-    line-height: 7.5vh;
+    line-height: 75px;
     letter-spacing: 2px;
 }
 
 .type-3 {
-    font-size: 16pt;
+    font-size: 24pt;
     font-family: "Poiret One";
     font-weight: 600;
     line-height: 7.5vh;
